--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ title: Open Coding
 description: "Class of 2026"
 owner_name: Anusha Khobare
 github_username: Flying-Book 
-github_repo: "student" 
-baseurl: "/student" 
+github_repo: "student_2.0" 
+baseurl: "/student_2.0" 
 future: true
 
 # Build settings
